--- a/css/index.html
+++ b/css/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <h1>Hi all</h1>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, enim. Vitae ea omnis hic dicta saepe labore esse tempore! Laudantium nam quasi consequatur expedita voluptatum id voluptate enim ratione distinctio.
 </body>
 </html>
