--- a/css/index.html
+++ b/css/index.html
@@ -9,5 +9,26 @@
 <body>
   <h1>Hi all</h1>
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, enim. Vitae ea omnis hic dicta saepe labore esse tempore! Laudantium nam quasi consequatur expedita voluptatum id voluptate enim ratione distinctio.
+
+
+  <!-- git commands -->
+<!-- clone- bring a repository that is hosted somewere like github into a folder on your local machine
+  -add-track your files and changes in git
+ -commit- save changes
+ - push- upload git commits to a remote repo, like Github
+
+
+
+
+
+ gitHub workFlow
+
+ write code  --> commit changes ---> make a pull request --->
+
+
+ local Git workFlow
+ <!-- write code --> stage changes (git add)--> commit changes (git commit) ---> push Changes (git push)---> make a pull request -->
+
+ -->
 </body>
 </html>
